@@ -2,7 +2,8 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
-	* Tab-completion improvments for :javascript and :open
+	* added new 'laststatus' option
+	* Tab-completion improvements for :javascript and :open
 	* IMPORTANT: changed semantics of :echo and :echoerr: Strings must be quoted with " or ' now,
 	  but you can do things like :echo 3+2 or :echo window.document now
 	* statusline is now white on black with bold font by default (like in (g)vim)
